--- a/views/layout.html
+++ b/views/layout.html
@@ -68,7 +68,6 @@
 <body>
   <!-- Navbar ================================================== -->
   <div class="navbar navbar-inverse">
-    <div class="flash">{{=response.flash or ''}}</div>
     <div class="navbar-inner">
       <div class="container">
         {{is_mobile=request.user_agent().is_mobile}}
@@ -79,7 +78,7 @@
           <span class="icon-bar"></span>
         </button>
         {{=response.logo or ''}}
-        <ul id="navbar" class="nav pull-right">{{='auth' in globals() and auth.navbar(mode="dropdown") or ''}}</ul>
+        <ul id="navbar" class="nav pull-right">{{='auth' in globals() and auth.navbar(mode="dropdown", referrer_actions=['register', 'profile']) or ''}}</ul>
         <div class="{{='nav-collapse' if is_mobile else 'nav'}}">
           {{if response.menu:}}
           {{=MENU(response.menu, _class='mobile-menu nav' if is_mobile else 'nav',mobile=is_mobile,li_class='dropdown',ul_class='dropdown-menu')}}
@@ -160,3 +159,13 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   <script src="{{=URL('static','js/share.js',vars=dict(static=URL('static','images')))}}"></script>
 </body>
 </html>
+
+<style>
+    .navbar-inverse .navbar-inner {background: #097381;}
+
+    .navbar-inverse .nav > li > a{
+        color: #FFFFFF;
+        font-weight: bold;
+        font-size: 16px;
+    }
+</style>
