--- a/views/manage/manage_exercises.html
+++ b/views/manage/manage_exercises.html
@@ -1,5 +1,5 @@
 {{extend 'layout.html'}}
 <h1>Manage Exercises</h1>
-<a href="{{=URL('manage', 'my_workouts')}}"
+<a href="{{=URL('manage', 'manage_workouts')}}"
    class="btn btn-primary">Manage Workouts</a><p></p>
 {{=form}}
