--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,25 +1,33 @@
 {{extend 'layout.html'}}
 
+<h1>
+    Welcome to {{=site_name}}
+</h1>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend, mauris quis pulvinar mattis, magna lacus luctus elit, fringilla accumsan nisi est quis nibh. Fusce eget sodales purus.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend, mauris quis pulvinar mattis, magna lacus luctus elit, fringilla accumsan nisi est quis nibh. Fusce eget sodales purus.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend, mauris quis pulvinar mattis, magna lacus luctus elit, fringilla accumsan nisi est quis nibh. Fusce eget sodales purus.
+</p>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend, mauris quis pulvinar mattis, magna lacus luctus elit, fringilla accumsan nisi est quis nibh. Fusce eget sodales purus.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend, mauris quis pulvinar mattis, magna lacus luctus elit, fringilla accumsan nisi est quis nibh. Fusce eget sodales purus.
+</p>
+
+
 <div align="center">
     <div id="myCarousel" class="carousel slide" align="left">
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-      </ol>
+      <h4>{{=site_name}} Features</h4>
       <!-- Carousel items -->
       <div class="carousel-inner">
         <div class="item active">
             <img src="/leveltrain/static/images/pie.png" alt="">
             <div class="carousel-caption">
-                          <h4>Second Thumbnail label</h4>
-                          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                          <h4>Workout Reports</h4>
+                          <p>Clients can see an in depth analysis of their progress throughout a workout.</p>
             </div>
         </div>
         <div class="item">
             <img src="/leveltrain/static/images/workout_view.png" alt="">
             <div class="carousel-caption">
-                          <h4>Second Thumbnail label</h4>
-                          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                          <h4>Easy-to-follow Interface</h4>
+                          <p>The {{=site_name}} system allows for trainers and clients to easily view workouts. Clients are able to send requests to trainers about</p>
             </div>
         </div>
       </div>
@@ -35,4 +43,3 @@
   max-height: 500px;
 }
 </style>
-ajsdflsdhlfsdhkgl
