--- a/views/view/reports.html
+++ b/views/view/reports.html
@@ -44,3 +44,9 @@
         </div>
     </div>
 {{pass}}
+<p>
+    <h4 class="well">
+        Reports not appearing? The charts may not be able to be generated at this time.
+        Please try again later. If this problem persists, please contact {{=site_name}} administration at {{=site_email}}
+</h4>
+</p>
