--- a/views/manage/feedback.html
+++ b/views/manage/feedback.html
@@ -1,8 +1,11 @@
 {{extend 'layout.html'}}
 <h1>Client Feedback</h1>
+{{if not feedback:}}
+You do not have any feedback yet from any of your clients. All feedback will appear here
+{{else:}}
 <br />
     {{for row in feedback:}}
-        <div class="well" style="min-width:500px; max-width:800px;">
+        <div class="well" style="min-width:500px; max-width:800px; border-color:rgb(129, 129, 213);">
             <p>
                 {{=PRE(SPAN(SPAN("{0} {1} ({2}) said this about workout {3}: \n"
                                 .format(row.auth_user.first_name,
@@ -20,3 +23,4 @@
         </div>
     {{pass}}
 </table>
+{{pass}}
