--- a/views/manage/manage_workouts.html
+++ b/views/manage/manage_workouts.html
@@ -3,3 +3,44 @@
 <a href="{{=URL('manage', 'manage_exercises')}}"
    class="btn btn-primary">Manage Exercises</a><p></p>
 {{=form}}
+
+{{if workouts:}}
+<div class="table-responsive">
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Client Name</th>
+                <th>Client Email</th>
+                <th style="text-align: center">View this Workout</th>
+                <th style="text-align: center">Leave Feedback</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {{for workout in workouts:}}
+                <tr>
+                    {{client = get_client(workout.id_client)}}
+                    <td>{{=workout.name}}</td>
+                    <td>{{=client.first_name}} {{=client.last_name}}</td>
+                    <td>{{=client.email}}</td>
+                    <td style="text-align: center">
+                        <a href="{{=URL('view','workout', args=[workout.id])}}" class="btn btn-primary">&#10145;</a></td>
+                    <td style="text-align: center">
+                        <a href="{{=URL('view','add_feedback',args=[workout.id])}}" class="btn btn-primary">&#10145;</a></td>
+                    <td>
+                    <a class="btn btn-default"><span class="icon magnifier icon-zoom-in glyphicon glyphicon-arrow-zoom-in"></span>View</a>
+                    <a class="btn btn-default"><span class="icon trash icon-trash glyphicon glyphicon-trash"></span>Delete</a>
+                    </td>
+                </tr>
+            {{pass}}
+        </tbody>
+    </table>
+</div>
+{{else:}}
+You have not yet created any workouts.
+{{pass}}
+
+<p>
+    NEW WORKOUT
+</p>
