--- a/views/manage/my_queue.html
+++ b/views/manage/my_queue.html
@@ -2,18 +2,21 @@
 
 <h1>My Queue</h1>
 <br />
+{{if not records:}}
+Your queue is currently empty. Level-Up requests will appear here when submitted by your clients.
+{{else:}}
 <table class="table table-striped table-bordered table-hover" style="width: auto; font-size:16px">
     {{for row in records:}}
         <tr>
             <td>{{=row.queue_message}}</td>
             <td>{{=A("Accept", _class="btn btn-primary btn-small",
-                    confirm='Are you sure you would like to promote this user?',
+                    confirm='Are you sure you would like to promote this user to the next level?',
                     callback=URL('level_up_client', args=[row.id_reps, row.id_workout, row.new_level, False]),
                     _style="padding-bottom:0; padding-top:0;",
                     delete="tr"
                 )}}</td>
             <td>{{=A("Deny", _class="btn btn-primary btn-small",
-                    confirm='Are you sure you would like to reset this user?',
+                    confirm='Are you sure you would like to reset this user to their current level?',
                     callback=URL('reset_client', args=[row.id_reps]),
                     _style="padding-bottom:0; padding-top:0;",
                     delete="tr"
@@ -21,3 +24,4 @@
         </tr>
     {{pass}}
 </table>
+{{pass}}
