--- a/views/layout.html
+++ b/views/layout.html
@@ -102,7 +102,7 @@
         </div>
         {{pass}}
 
-        <div >
+        <div class="{{=middle_columns}}">
             {{block center}}
             {{include}}
             {{end}}
