--- a/views/view/workout.html
+++ b/views/view/workout.html
@@ -1,4 +1,11 @@
 {{extend 'layout.html'}}
+{{if workout:}}
+
+<script src="/bdwl/static/js/jquery.js" type="text/javascript"></script>
+<script src="/bdwl/static/js/workout_polling.js" type="text/javascript"></script>
+
+
+<div class="workout">
     <h3 class="well" style="text-indent:30px;">
         {{=workout.name}}
     </h3>
@@ -24,7 +31,9 @@
                     <a href="{{=URL('increase_week', args=[row.primary_reps.id])}}" class="btn btn-primary btn-small">&#10133;</a>
                                                                   {{pass}}</td>
                 <td style="text-align:center; padding-top: 20px;">
-                    <a href="{{=URL('exercise', args=[row.primary_reps.id_exercise])}}">{{=row.exercise.name}}</a></td>
+                    {{=A(row.exercise.name, _class="btn btn-primary", _id="exercise_link",
+                             _href=URL('exercise', args=[row.primary_reps.id_exercise])
+                             )}}
                 </td>
                 <td>
                     <div style="text-align:center">
@@ -101,7 +110,9 @@
                                                                     ="--"
                                                                     pass}}</td>
                 <td style="text-align:center; padding-top: 20px;">
-                    <a href="{{=URL('exercise', args=[row.reps.id_exercise])}}">{{=row.exercise.name}}</a></td>
+                    {{=A(row.exercise.name, _class="btn btn-primary", _id="exercise_link",
+                                     _href=URL('exercise', args=[row.reps.id_exercise])
+                                     )}}</td>
                 <td>
                     <div style="text-align:center">
                     LBS<hr />
@@ -129,17 +140,17 @@
                         <div style="text-align:center">
                         {{=weight}}<hr />
                             {{if is_trainer():}}
-                            {{=A(unichr(9650), _class="btn btn-primary btn-small btn-success",
+                            {{=A(unichr(9650), _class="btn btn-small btn-success",
                                      _href=URL('manage', 'level_up_client', args=[row.reps.id, workout.id, row.reps.c_level + 1, True]),
                                      _style="padding-bottom:0; padding-top:0;",
                                      )}}
-                            {{=A(unichr(9660), _class="btn btn-primary btn-small btn-danger",
+                            {{=A(unichr(9660), _class="btn btn-small btn-danger",
                                      _href=URL('manage', 'level_up_client', args=[row.reps.id, workout.id, row.reps.c_level - 1, True]),
                                      _style="padding-bottom:0; padding-top:0;",
                                      )}}
                             {{else:}}
                                 <div id="checkbox">
-                                {{=A(unichr(9650), _class="btn btn-primary btn-small btn-success",
+                                {{=A(unichr(9650), _class="btn btn-small btn-success",
                                      confirm='Are you sure you would like to notify your trainer about a level up?',
                                      callback=URL('pass_level', args=[workout.id, row.reps.code, row.reps.c_level, True]),
                                      _style="padding-bottom:0; padding-top:0;",
@@ -189,6 +200,32 @@
 <a href="{{=URL('view','add_feedback',args=[workout.id])}}" class="btn btn-primary">Leave Feedback &#10145;</a>
 
 
+
+
+
+
+<p id="messages">
+    {{if chat_logs:}}
+        {{for msg in chat_logs:}}
+            {{=msg.chat_message}}<br/>
+        {{pass}}
+    {{pass}}
+</p>
+
+<form>
+    <input name="id_workout" type="hidden" value="{{=workout.id}}"/>
+    <input name="id_user" type="hidden" value="{{=auth.user_id}}"/>
+    <input name="new_message" />
+    <input type="button" onclick="ajax('{{=URL('view', 'create_message')}}', ['id_workout', 'id_user', 'new_message'], ':eval')" />
+</form>
+
+
+
+
+
+
+</div>
+
 <style>
 .table-responsive {
     width: 100%;
@@ -197,4 +234,34 @@
     overflow-style: autohiding-scrollbar;
     -webkit-overflow-scrolling: touch;
 }
+th {
+    color: white;
+    background-color: #097381;
+}
+
+#exercise_link {
+    border-radius: 50px; -moz-border-radius: 50px; -webkit-border-radius: 50px;
+    width: 300px;
+    font-size: 16px;
+}
+body {
+    background-color: black;
+}
+.main {
+    background-color: white;
+}
+.workout {
+    margin-right: 30px;
+}
+h3{
+    color:white;
+}
+    
+.well {
+    background-image: linear-gradient(to left,#fff,#097381);
+}
 </style>
+
+{{else:}}
+    <h2>An error has occurred.</h2>
+{{pass}}
